added full logic for file_verification

--- a/web_service/templates/includes/services/file_verification.j2
+++ b/web_service/templates/includes/services/file_verification.j2
@@ -78,7 +78,7 @@
         task_state = 'ERROR';
         resetBtn.innerHTML = select_next_file;
         progressBarElement.style.backgroundColor = '#ff0000';
-        progressBarMessageElement.innerHTML =  "{{ _('Failure') }}";
+        progressBarMessageElement.innerHTML =  "{{ _('Failed') }}";
     }
 
     function customResult(resultElement, result) {
