--- a/web_service/static/css/style.css
+++ b/web_service/static/css/style.css
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  height: 100%;
 }
 
 *,
@@ -78,10 +79,23 @@ img {
 }
 
 body {
+  margin: 0;
+  display: flex;
+  flex-direction: column;
   min-width: 320px;
+  height: 100%;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   background-color: var(--white-color);
+}
+
+main {
+  flex-grow: 1;
+  position: relative;
+}
+
+footer {
+  flex-shrink: 0;
 }
 
 .list-reset {
@@ -110,6 +124,24 @@ body {
   padding: 50px 75px;
   margin: 0 auto;
   width: 100%;
+}
+
+.base {
+  display: flex;
+  flex-direction: column;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  min-height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-image: url(../img/1674312417_foni-club-p-svetlo-serii-fon-1.jpg);
+}
+
+.base > div {
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: auto;
 }
 
 .header__container {
@@ -263,15 +295,6 @@ body {
   color: var(--brown);
 }
 
-.base {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  min-height: 500px;
-  width: 100%;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-image: url(../img/1674312417_foni-club-p-svetlo-serii-fon-1.jpg);
-}
-
 .header-title {
   font-family: "RubikDirt", sans-serif;
   display: flex;
@@ -298,7 +321,7 @@ body {
 
 .footer {
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: var(--black);
 }
 
@@ -710,6 +733,7 @@ body {
   font-weight: 700;
   color: #333;
 }
+
 .privacy-policy-h5 {
   font-family: Montserrat, sans-serif;
   font-size: 16px;
@@ -743,6 +767,7 @@ body {
 
 .home-title {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  margin-top: 25px;
   margin-bottom: 25px;
   font-size: 2.875rem;
   font-weight: 700;
@@ -819,277 +844,6 @@ body {
 
 .home-item-2:not(:last-child) {
   margin-right: 25px;
-}
-
-@media screen and (max-width: 1200px) {
-  .container {
-    padding: 50px;
-  }
-
-  .footer__column {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .footer__address {
-    padding-top: 10px;
-  }
-
-  .footer__privacy-policy-text {
-    line-height: 32px;
-    margin-top: 10px;
-    margin-bottom: 0;
-  }
-}
-
-@media screen and (max-width: 1023px) {
-  .container {
-    padding: 50px;
-    margin: 0 auto;
-    width: 100%;
-  }
-
-  .header__container {
-    padding: 15px 50px;
-  }
-
-  .header__container-bottom {
-    padding: 0 50px;
-  }
-
-  .home-content {
-    padding: 30px 0;
-  }
-
-  .navigation {
-    width: calc(100% / 4);
-  }
-
-  .row {
-    justify-content: space-between;
-  }
-}
-
-@media screen and (max-width: 992px) {
-  .base {
-    min-height: 320px;
-  }
-
-  .footer__container {
-    padding: 25px 50px;
-  }
-
-  .home-item {
-    padding: 10px;
-  }
-
-   .home-item-2 {
-    padding: 10px;
-  }
-
-   .navigation {
-     margin-bottom: 25px;
-   }
-   .section-account {
-     flex-direction: column;
-   }
-}
-
-@media screen and (max-width: 767px) {
-  .header-bottom__item:not(:last-child) {
-    margin-right: 15px;
-  }
-
-  .header-bottom__item {
-    text-align: right;
-  }
-
-  .home-content {
-    padding: 1px 0;
-  }
-
-  .home-list-2 {
-    width: 100%;
-    flex-wrap: wrap;
-  }
-
-  .home-item-2 {
-    width: 100%;
-  }
-
-  .home-item-2:not(:last-child) {
-    margin-right: 0;
-    margin-bottom: 25px;
-  }
-
-  .navigation {
-    width: 100%;
-    margin-right: auto;
-  }
-
-  .section-content {
-    flex-direction: column;
-    width: 100%;
-  }
-
-  .row {
-    flex-direction: column;
-  }
-
-  .footer__link, .footer__text, .footer__privacy-policy, .footer__privacy-policy-text, .footer__privacy-policy-link {
-    font-size: 12px;
-    line-height: 24px;
-  }
-
-  .privacy-policy-content {
-    width: 100%;
-    padding: 50px;
-  }
-
-  .privacy-policy-title {
-    font-size: 26px;
-    font-weight: 700;
-  }
-
-  .privacy-policy-h5 {
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 1.5;
-  }
-
-  .privacy-policy-p {
-    font-size: 14px;
-    line-height: 1.5;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .container {
-    width: 100%;
-    padding: 15px;
-  }
-
-  .header__container {
-    padding: 0 10px;
-  }
-
-  .header__container-bottom {
-    flex-direction: column;
-    padding: 0 15px;
-  }
-
-  .header-title {
-    align-items: center;
-    margin-bottom: 15px;
-  }
-
-  .social-icons__item:not(:last-child) {
-    margin-right: 5px;
-  }
-
-  .account-avatar {
-    width: 100px;
-    height: 80px;
-    margin-right: 15px;
-  }
-
-   .footer__container {
-     padding: 15px;
-     flex-direction: column-reverse;
-  }
-
-   .footer-title {
-     text-align: left;
-   }
-
-   .footer__column {
-     width: 100%;
-   }
-
-   .footer__contacts {
-     align-items: flex-start;
-     width: 100%;
-   }
-
-   .footer__privacy-policy {
-     padding-top: 15px;
-   }
-}
-
-@media screen and (max-width: 480px) {
-  .header__container-bottom {
-    height: auto;
-  }
-
-  .header-bottom__link {
-    font-size: 23px;
-  }
-
-  .section-account {
-    flex-direction: column;
-  }
-
-  .navigation {
-    width: 100%;
-    margin-bottom: 25px;
-  }
-
-  .account-avatar {
-    width: 150px;
-    height: 150px;
-  }
-
-  .form-input, .form-group {
-    width: 100%;
-  }
-
-  .btn_success {
-    width: 100%;
-  }
-}
-
-@media screen and (max-width: 380px) {
-  .section-content {
-    width: 100%;
-  }
-
-  .account {
-    flex-direction: column;
-  }
-
-  .account-column {
-    width: 100%;
-  }
-
-  .account-avatar {
-    margin-bottom: 15px;
-  }
-
-  .account-name {
-    margin-bottom: 15px;
-  }
-
-  .row-block:not(:last-child) {
-    margin-right: 0;
-  }
-
-   .privacy-policy-content {
-    padding: 15px;
-  }
-
-  .privacy-policy-title {
-    font-size: 23px;
-    margin-bottom: 25px;
-  }
-
-  .privacy-policy-h5 {
-    font-size: 12px;
-  }
-
-  .privacy-policy-p {
-    font-size: 12px;
-  }
-
 }
 
 .loader {
@@ -1398,4 +1152,350 @@ body {
   height: 100%;
   margin: 10px 0 0 0;
   align-items: center;
+}
+
+@media screen and (max-width: 1200px) {
+  .container {
+    padding: 50px;
+  }
+
+  .footer__column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__address {
+    padding-top: 10px;
+  }
+
+  .footer__privacy-policy-text {
+    line-height: 32px;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+}
+
+@media screen and (max-width: 1023px) {
+  .container {
+    padding: 50px;
+    margin: 0 auto;
+    width: 100%;
+  }
+
+  .header__container {
+    padding: 15px 50px;
+  }
+
+  .header__container-bottom {
+    padding: 0 50px;
+  }
+
+  .home-content {
+    padding: 0;
+  }
+
+  .home-title {
+    font-size: 2.775rem;
+    line-height: 1;
+    margin-top: 0;
+  }
+
+  .home-subtitle {
+    font-size: 2.225rem;
+    line-height: 1;
+    margin-top: 0;
+  }
+
+  .navigation {
+    width: calc(100% / 4);
+  }
+
+  .row {
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .footer__container {
+    padding: 25px 50px;
+  }
+
+  .home-item {
+    padding: 10px;
+  }
+
+   .home-item-2 {
+    padding: 10px;
+  }
+
+   .home-title {
+     font-size: 2.5rem;
+   }
+
+   .home-subtitle {
+     font-size: 2rem;
+   }
+
+   .navigation {
+     margin-bottom: 25px;
+   }
+   .section-account {
+     flex-direction: column;
+   }
+}
+
+@media screen and (max-width: 767px) {
+  .header-bottom__item:not(:last-child) {
+    margin-right: 15px;
+  }
+
+  .header-bottom__item {
+    text-align: center;
+  }
+
+  .home-content {
+    padding: 1px 0;
+  }
+
+  .home-list-2 {
+    width: 100%;
+    flex-wrap: wrap;
+  }
+
+  .home-item-2 {
+    width: 100%;
+  }
+
+  .home-item-2:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 25px;
+  }
+
+  .navigation {
+    width: 100%;
+    margin-right: auto;
+  }
+
+  .section-content {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .row {
+    flex-direction: column;
+  }
+
+  .footer__link, .footer__text, .footer__privacy-policy, .footer__privacy-policy-text, .footer__privacy-policy-link {
+    font-size: 12px;
+    line-height: 24px;
+  }
+
+  .privacy-policy-content {
+    width: 100%;
+    padding: 50px;
+  }
+
+  .privacy-policy-title {
+    font-size: 26px;
+    font-weight: 700;
+  }
+
+  .privacy-policy-h5 {
+    font-size: 16px;
+    font-weight: 700;
+    line-height: 1.5;
+  }
+
+  .privacy-policy-p {
+    font-size: 14px;
+    line-height: 1.5;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .container {
+    width: 100%;
+    padding: 15px;
+  }
+
+  .header__container {
+    padding: 0 10px;
+  }
+
+  .header__container-bottom {
+    flex-direction: column;
+    padding: 0 15px;
+  }
+
+  .header-title {
+    align-items: center;
+    margin-right: 0;
+    margin-bottom: 15px;
+  }
+
+  .header-bottom__item:not(:last-child) {
+    margin-right: 8px;
+  }
+
+  .social-icons__item:not(:last-child) {
+    margin-right: 5px;
+  }
+
+  .account-avatar {
+    width: 100px;
+    height: 80px;
+    margin-right: 15px;
+  }
+
+   .footer__container {
+     padding: 15px;
+     flex-direction: column-reverse;
+  }
+
+   .footer-title {
+     text-align: left;
+   }
+
+   .footer__column {
+     width: 100%;
+   }
+
+   .footer__contacts {
+     align-items: flex-start;
+     width: 100%;
+   }
+
+   .footer__privacy-policy {
+     padding-top: 15px;
+   }
+}
+
+@media screen and (max-width: 480px) {
+  .header__container-bottom {
+    height: auto;
+  }
+
+  .header-bottom__link {
+    font-size: 1.35rem;
+  }
+
+  .section-account {
+    flex-direction: column;
+  }
+
+  .navigation {
+    width: 100%;
+    margin-bottom: 25px;
+  }
+
+  .account-avatar {
+    width: 150px;
+    height: 150px;
+  }
+/*
+  .form-input, .form-group {
+    width: 100%;
+  }*/
+}
+
+@media screen and (max-width: 380px) {
+  .section-content {
+    width: 100%;
+  }
+
+  .account {
+    flex-direction: column;
+  }
+
+  .account-column {
+    width: 100%;
+  }
+
+  .account-avatar {
+    margin-bottom: 15px;
+  }
+
+  .account-name {
+    margin-bottom: 15px;
+  }
+
+  .row-block:not(:last-child) {
+    margin-right: 0;
+  }
+
+  .privacy-policy-content {
+    padding: 15px;
+  }
+
+  .privacy-policy-title {
+    font-size: 23px;
+    margin-bottom: 25px;
+  }
+
+  .privacy-policy-h5 {
+    font-size: 12px;
+  }
+
+  .privacy-policy-p {
+    font-size: 12px;
+  }
+
+  .header-title {
+    margin-bottom: 5px;
+  }
+
+  .header-bottom__link {
+    font-size: 1.15rem;
+  }
+
+  .header__btn {
+    margin-right: 0;
+  }
+
+  .header__link-login {
+    padding-top: 5px;
+    padding-left: 25px;
+    text-align: left;
+    font-size: 0.8rem;
+    line-height: 1.2;
+  }
+
+  .header__link-logout {
+    padding-top: 5px;
+    text-align: left;
+    font-size: 0.8rem;
+    line-height: 1.2;
+  }
+
+  .base {
+    min-height: 500px;
+  }
+
+   .form-input, .form-group {
+    width: 100%;
+  }
+
+  .btn {
+    width: 100%;
+  }
+
+  .home-title {
+    font-size: 2rem;
+  }
+
+  .home-subtitle {
+    font-size: 1.7rem;
+  }
+
+  .home-descr {
+    font-size: 1.1rem;
+  }
+
+  .home-item {
+    font-size: 1.1rem;
+  }
+
+  .home-item-2 {
+    font-size: 1.1rem;
+  }
 }
